# pigweed-experimental

./: .bazelignore  .gitignore  .gitmodules  .gn  BUILD.bazel  BUILD.gn  BUILDCONFIG.gn  OWNERS  PW_PLUGINS  README.md  WORKSPACE  activate.bat  banner.txt  bootstrap.bat  bootstrap.sh  env_setup.json  modules.gni  navbar.md  pigweed.json
applications/app_common_impl/: BUILD.gn  app_common_vars.gni  common_arduino.cc  common_host_imgui.cc  common_host_null.cc  common_mimxrt595.cc  common_pico.cc  common_stm32.cc  common_stm32cube.cc
applications/rpc/: BUILD.gn  README.md  main.cc  remoticon_service_nanopb.cc  tokenizer_database.csv
applications/rpc/public/remoticon/: remoticon_service_nanopb.h
applications/rpc/remoticon_proto/: remoticon.proto
applications/strings/: BUILD.gn  README.md  string_demo.cc  system_status.cc  system_status.h  system_status_test.cc  tokenizer_database.csv
applications/terminal_display/: BUILD.gn  ansi.h  main.cc  text_buffer.cc  text_buffer.h  text_buffer_test.cc  tokenizer_database.csv
applications/tls_example/: BUILD.gn  README.md  sysdeps.cc  teensy41_bloaty_config.bloaty  tls_client_example.cc  tls_client_example.gni
applications/tls_example/backends/: backend_interface.h
applications/tls_example/backends/tls/boringssl/: BUILD.gn  boringssl_backend.cc  boringssl_backend.h
applications/tls_example/backends/tls/dummy/: BUILD.gn  dummy.cc  dummy.h
applications/tls_example/backends/tls/mbedtls/: BUILD.gn  mbedtls_backend.cc  mbedtls_backend.h
applications/tls_example/backends/tls/picotls/: BUILD.gn  picotls_backend.cc  picotls_backend.h
applications/tls_example/backends/transport/teensy_ethernet/: BUILD.gn  teensy_ethernet.cc  teensy_ethernet.h  teensy_library_source_set.gni
applications/tls_example/time_injection/: generate_time_code.py
applications/tls_example/trust_store/: README.md  ca_certificates_crls.h  generate_cert_crl_header_file.py  global_sign_r2.crl.pem  gts_ca_101.crl.pem
applications/tls_example/trust_store/py/: BUILD.gn  setup.cfg  setup.py
applications/tls_example/trust_store/py/trust_store_generation/: generate_trust_store.py
build_overrides/: modules.gni  pi_pico.gni  pigweed.gni
pw_async_bench/: BUILD.gn  base.cc  callback.cc  callback_echo.cc  callback_executable.cc  callback_impl.cc  poll.cc  poll_echo.cc  poll_executable.cc  poll_impl.cc
pw_async_bench/public/pw_async_bench/: base.h  bivariant.h  callback.h  callback_echo.h  callback_impl.h  poll.h  poll_echo.h  poll_impl.h
pw_board_led_arduino/: BUILD.gn  led.cc
pw_board_led_host/: BUILD.gn
pw_board_led_mimxrt595_evk/: BUILD.gn  led.cc
pw_board_led_pico/: BUILD.gn  led.cc
pw_board_led_stm32cube/: BUILD.gn  led.cc
pw_board_led_stm32cubef4/: BUILD.gn  led.cc
pw_board_led_stm32f429i_disc1/: BUILD.gn  led.cc
pw_board_led_stm32f769i_disc0/: BUILD.gn  led.cc
pw_color/: color_test.cc
pw_coordinates/: BUILD.gn
pw_data_link/: BUILD.gn  data_link_test.cc  sample_app.cc  server_socket.cc  socket_data_link.cc  socket_data_link_test.cc
pw_data_link/public/pw_data_link/: data_link.h  server_socket.h  simple_allocator.h  socket_data_link.h  socket_data_link_thread.h
pw_digital_io_arduino/: BUILD.gn  digital_io.cc
pw_digital_io_null/: BUILD.gn  digital_io.cc
pw_digital_io_pico/: BUILD.gn  digital_io.cc
pw_digital_io_rp2040/: BUILD.gn  digital_io.cc
pw_digital_io_stm32cube/: BUILD.gn  digital_io.cc
pw_digital_io_stm32cube/public/pw_digital_io_stm32cube/: digital_io.h
pw_display_driver/: BUILD.gn
pw_display_driver/public/pw_display_driver/: display_driver.h  spi_helper.h
pw_display_driver_ili9341/: BUILD.gn  display_driver.cc
pw_display_driver_ili9341/public/pw_display_driver_ili9341/: display_driver.h
pw_display_driver_imgui/: BUILD.gn  display_driver.cc
pw_display_driver_mipi/: BUILD.gn  display_driver.cc
pw_display_driver_null/: BUILD.gn
pw_display_driver_st7735/: BUILD.gn  display_driver.cc
pw_display_driver_st7789/: BUILD.gn  display_driver.cc
pw_display_host_imgui/: BUILD.gn  display.cc  glfw.gni  imgui.gni
pw_display_null/: BUILD.gn  display.cc
pw_display_pico_ili9341/: BUILD.gn  display.cc
pw_display_stm32f429i_disc1_stm32cube_ili9341/: display.cc
pw_draw/: BUILD.gn  draw_test.cc
pw_draw/public/pw_draw/: draw.cc  draw.h  font6x8.cc  font6x8.h  font6x8_box_chars.h  font_set.h  pigweed_farm.h  png2rgb565.py  sprite_sheet.h  text_area.cc  text_area.h
pw_draw/public/pw_draw/templates/: font.jinja
pw_framebuffer/: BUILD.gn  framebuffer_test.cc  rgb565.cc
pw_ft6236/: BUILD.gn  device.cc
pw_graphics/pw_display/: BUILD.gn  display.cc  display_test.cc
pw_graphics/pw_display/public/pw_display/: display.h
pw_graphics/pw_display_teensy_ili9341/: BUILD.gn  README.md  display.cc
pw_graphics/pw_display_teensy_ili9341/public_overrides/pw_display/: display_backend.h
pw_i2c_rp2040/: BUILD.bazel  BUILD.gn  initiator.cc
pw_i2c_rp2040/public/pw_i2c_rp2040/: initiator.h
pw_mipi_dsi/: BUILD.gn
pw_mipi_dsi_mcuxpresso/: BUILD.gn  common.cc  common.h  device.cc  framebuffer_device.cc
pw_mipi_dsi_mcuxpresso/public/pw_mipi_dsi_mcuxpresso/: device.h  framebuffer_device.h
pw_pixel_pusher/: BUILD.gn
pw_pixel_pusher_rp2040_pio/: BUILD.gn  pixel_pusher.cc
pw_spi_arduino/: BUILD.gn  chip_selector.cc  initiator.cc
pw_spi_arduino/public/pw_spi_arduino/: chip_selector.h  initiator.h
pw_spi_pico/: BUILD.gn  chip_selector.cc  initiator.cc
pw_spi_rp2040/: BUILD.gn  chip_selector.cc  initiator.cc
pw_spi_stm32cube/: BUILD.gn  chip_selector.cc  initiator.cc
pw_spi_stm32f429i_disc1_stm32cube/: BUILD.gn  chip_selector.cc  initiator.cc
pw_spin_delay/: BUILD.gn
pw_spin_delay_arduino/: delay.cc
pw_spin_delay_host/: BUILD.gn  (+1 more)
pw_sys_io_stm32cubef4/: BUILD.gn  sys_io.cc
pw_sys_io_stm32cubef4/public/pw_sys_io_stm32cubef4/: init.h
pw_toolchain_extra/: README.md  generate_toolchain.gni
pw_toolchain_extra/cortex_m/: BUILD.gn  gcc_toolchain.gni
pw_touchscreen_teensy_xpt2046/: BUILD.gn  touchscreen.cc
targets/arduino/: target_toolchains.gni
targets/host/: BUILD.gn  target_toolchains.gni
(+250 files in other folders)
