# Copyright 2021 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

buildconfig = "//BUILDCONFIG.gn"
import("//build_overrides/pigweed.gni")

default_args = {
  # Set the nanopb directory for protobuf generation.
  dir_pw_third_party_nanopb = "//third_party/nanopb"

  # Sets the FreeRTOS source directory.
  dir_pw_third_party_freertos = "//third_party/freertos/Source"

  # Use the new Python build and merged 'pigweed' Python package.
  pw_build_USE_NEW_PYTHON_BUILD = true

  pw_build_PIP_CONSTRAINTS = [
    # Pigweed upstream constraints
    "$dir_pw_env_setup/py/pw_env_setup/virtualenv_setup/constraint.list",

    # Experimental specific constraints
    "//tools/constraint.list",
  ]

  pw_build_PIP_REQUIREMENTS = [
    # Experimental specific requirements
    "//tools/requirements.txt",
  ]
}
