# Copyright 2021 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

declare_args() {
  # Location of the Pigweed repository.
  dir_pigweed = "//third_party/pigweed/"
}

# Upstream Pigweed modules.
import("$dir_pigweed/modules.gni")

# Experimental modules.
declare_args() {
  dir_pw_board_led = get_path_info("//pw_board_led", "abspath")
  dir_pw_board_led_arduino = get_path_info("//pw_board_led_arduino", "abspath")
  dir_pw_board_led_host = get_path_info("//pw_board_led_host", "abspath")
  dir_pw_board_led_stm32f429i_disc1 =
      get_path_info("//pw_board_led_stm32f429i_disc1", "abspath")
  dir_pw_board_led_stm32cubef4 =
      get_path_info("//pw_board_led_stm32cubef4", "abspath")
  dir_pw_spin_delay = get_path_info("//pw_spin_delay", "abspath")
  dir_pw_spin_delay_arduino =
      get_path_info("//pw_spin_delay_arduino", "abspath")
  dir_pw_spin_delay_host = get_path_info("//pw_spin_delay_host", "abspath")
  dir_pw_spin_delay_stm32f429i_disc1 =
      get_path_info("//pw_spin_delay_stm32f429i_disc1", "abspath")
  dir_pw_spin_delay_stm32cubef4 =
      get_path_info("//pw_spin_delay_stm32cubef4", "abspath")
  dir_pw_sys_io_stm32cubef4 =
      get_path_info("//pw_sys_io_stm32cubef4", "abspath")
  dir_pw_third_party_stm32cubef4 =
      get_path_info("//third_party/stm32cubef4", "abspath")
}
