# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")

config("public_includes") {
  include_dirs = [ "public" ]
}

pw_source_set("pw_digital_io_stm32cube") {
  public_configs = [ ":public_includes" ]
  public = [ "public/ps_digital_io_stm32cube/digital_io.h" ]
  public_deps = [
    "$dir_pw_assert",
    "$dir_pw_digital_io",
    "$dir_pw_spi_stm32f429i_disc1_stm32cube",
    "$dir_pw_status",
    "$dir_pw_third_party/stm32cube",
  ]
  sources = [ "digital_io.cc" ]
  remove_configs = [ "$dir_pw_build:strict_warnings" ]
}
