# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

group("pw_display_driver") {
  deps = [ ":display_driver" ]
}

pw_source_set("display_driver") {
  public_configs = [ ":public_include_path" ]
  public = [ "public/pw_display_driver/display_driver.h" ]
  public_deps = [
    "$dir_pw_framebuffer",
    "$dir_pw_span",
    "$dir_pw_status",
  ]
}

pw_test("display_driver_test") {
}

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}
